--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
+before_install:
+# LibCouchbase
+  - sudo wget -O/etc/apt/sources.list.d/couchbase.list http://packages.couchbase.com/ubuntu/couchbase-ubuntu1204.list
+  - "sudo wget http://packages.couchbase.com/ubuntu/couchbase.key && sudo cat couchbase.key | sudo apt-key add -"
+  - sudo apt-get update
+  - sudo apt-get install libcouchbase2 libcouchbase-dev
+
 language: python
+
 python:
   - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
+
 script:
   - python setup.py -q install
